# smartFarm

smartfarm/: Makefile  Makefile.in  config.h  config.status  configure  smartfarm.glade.bak  smartfarm.gladep
smartfarm/autom4te.cache/: output.0  requests  traces.0  traces.1
smartfarm/po/: Makefile  Makefile.in
smartfarm/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  absenteisme.txt  absenteisme.txt~  agriculture.txt  agricultureCrud.c  agricultureCrud.c~  agricultureCrud.h  agricultureCrud.h~  callbacks.c  callbacks.c~  callbacks.h  callbacks.h~  capteur.txt  capteur.txt~  capteurCrud.c  capteurCrud.c~  capteurCrud.h  capteurCrud.h~  client.txt  clientCrud.c  clientCrud.c~  clientCrud.h  clientCrud.h~  dashboard.c  dashboard.c~  dashboard.h  equipement.txt  equipementCrud.c  equipementCrud.c~  equipementCrud.h  equipementCrud.h~  humidite.txt  interface.c  interface.c.bak  interface.h  main.c~  ouvrier.txt  (+11 more)
smartfarm/src/.deps/: agricultureCrud.Po  callbacks.Po  capteurCrud.Po  clientCrud.Po  dashboard.Po  equipementCrud.Po  interface.Po  main.Po  ouvrierCrud.Po  support.Po  tropauxCrud.Po
